Fixed misaligned delays in switching

--- a/styles.css
+++ b/styles.css
@@ -87,9 +87,14 @@ button {
     transition: all 2s;
 }
 
-main, footer {
+main {
     color: #222222;
     transition: all 2s;
+}
+
+footer {
+    color: #222222;
+    transition: all 1s;
 }
 
 main section {
@@ -133,12 +138,17 @@ a:visited {
     position: absolute;
     z-index: 1;
     bottom: -50px;
-    left: -325px;
+    left: -425px;
 
     transition: all 1s;
 }
 
 /* Layout and Positioning */
+body {
+    display: flex;
+    justify-content: center;
+}
+
 #container {
     display: flex;
     flex-direction: column;
@@ -315,9 +325,9 @@ main section.switch h3, main section.switch a {
     transition: color 2s, background-color 1s, color 1s;
 }
 
-footer.switch p {
+footer.switch {
     color: #EBEBEB;
-    transition: all 0.5s;
+    transition: all 1s;
 }
 
 #sweet-image.switch {
@@ -326,7 +336,7 @@ footer.switch p {
 }
 
 #spicy-image.switch {
-    transform: translateX(250px);
+    transform: translateX(350px);
     transition: all 1s;
 }
 
